<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".SignUp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="Image:"
                android:textColor="#3F56BD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.374" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="96dp"
                android:layout_height="20dp"
                android:layout_marginTop="152dp"
                android:gravity="right"
                android:text="Office Address:"
                android:textColor="#3F56BD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.013"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="159dp"
                android:layout_height="141dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView6">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:gravity="center"
                    android:text="@string/other"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="19dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="44dp"
                android:text="@string/gender"
                android:textColor="#3F56BD"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/radioGroup"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="210dp"
                android:layout_height="39dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="36dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_your_designation"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="88dp"
                android:layout_height="19dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:gravity="right"
                android:text="@string/designation"
                android:textColor="#3F56BD"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="201dp"
                android:layout_height="38dp"
                android:layout_marginEnd="96dp"
                android:layout_marginBottom="12dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="176dp"
                android:text="@string/name"
                android:textColor="#3F51B5"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
                app:layout_constraintHorizontal_bias="0.86"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_marginTop="36dp"
                android:gravity="center_horizontal|center_vertical"
                android:shadowColor="#0D00FF"
                android:text="@string/employee_details"
                android:textColor="#0000FF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.156" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:text="@string/please_enter_your_details_below"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/capture"
                android:layout_width="127dp"
                android:layout_height="54dp"
                android:text="Capture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.407"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="88dp"
                android:contentDescription="See your image here"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.685"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/buttonyour"
                android:layout_width="145dp"
                android:layout_height="58dp"
                android:layout_marginStart="132dp"
                android:layout_marginBottom="16dp"
                android:onClick="yourLoc"
                android:text="Your Location"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/textView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>